[package]
name = "sparse-merkle-tree"
version = "0.1.0-alpha2"
authors = ["jjy <jjyruby@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/jjyr/sparse-merkle-tree"
description = "Sparse merkle tree implement in rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2b-rs = "0.1"
lazy_static = "1.4"
failure = "0.1"

[dev-dependencies]
proptest = "0.9"
criterion = "0.2"
rand = "0.7"

[[bench]]
name = "smt_benchmark"
harness = false
