[package]
name = "sparse-merkle-tree"
version = "0.4.0-rc1"
authors = ["jjy <jjyruby@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/jjyr/sparse-merkle-tree"
description = "Sparse merkle tree implement in rust"
exclude = ["/fixtures", "/proptest-regressions"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std", "blake2b"]
std = []
blake2b = ["blake2b-rs"]

[dependencies]
cfg-if = "0.1"
blake2b-rs = { version = "0.1", optional = true }
hex = "0.4"

[dev-dependencies]
proptest = "0.9"
criterion = "0.2"
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

[[bench]]
name = "smt_benchmark"
harness = false
